# ruwaijurai-chatbot

./: app.py  chat_logs.json  chatbot_config.json  documents_hash.json  main.py  pyproject.toml  secrets.toml
files/: Series Data Lampung 2015-2025.xlsx
