[project]
name = "chatbotpdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.6"
dependencies = [
    "google-generativeai>=0.8.5",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "pypdf2>=3.0.1",
    "sastrawi>=1.0.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.0.0",
    "streamlit>=1.47.1",
    "tiktoken>=0.9.0",
    "wordcloud>=1.9.4",
]
